[package]
name = "os"
description = "A simple operating system written in Rust"
version = "0.1.0"
authors = ["Jason Zhang <tinuvile@outlook.com>"]
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.9"
xmas-elf = "0.10"

[profile.release]
debug = true