[package]
name = "user_lib"
version = "0.1.0"
authors = ["Jason Zhang <tinuvile@outlook.com>"]
edition = "2024"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } 
buddy_system_allocator = "0.6"
bitflags = "2.9"

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []